--- a/example-03/client/index.html
+++ b/example-03/client/index.html
@@ -14,6 +14,9 @@
         <video id="remote-view" autoplay></video>
       </div>
     </div>
-    <button id="start">Start Video Chat</button>
+    <div id="start">
+      <input id="code-input" placeholder="Enter your code" />
+      <button id="start-button" disabled>Start Video Chat</button>
+    </div>
   </body>
 </html>
